--- a/Task3/style.css
+++ b/Task3/style.css
@@ -1,25 +1,89 @@
-body{
-    background-color:darkorange;
+nav{
+    display: inline;
+    list-style: none;
 }
-.head{
-    color: darkblue;
-    font-size: medium;
+ul{
+    list-style: none;
+    display: inline;
+    list-style: none;
+    
+    
 }
-#bglime{
-    background-color: greenyellow;
+ul li{
+    position: absolute;
+    top: 2%;
+    left: 2%;
     font-size: xx-large;
 }
-span{
-    color: red;
+ol{
+    margin-left: 20%;
+    position: absolute;
+    top: 3%;
 }
-p{
-   color: white; 
-   font-size:x-large;
+
+ol a{
+    display: inline;
+    margin-left: 40px;
+    font-size:large;
+    
 }
-#para{
-    color: green;
-    font-size: small;
+ol button{
+    margin-left: 55%;
+    padding: 5px;
+    color: blue;
+    background-color: rgba(0, 179, 255, 0.799);
+    border-radius: 10px;
+    position: absolute;
+    width: 30%;
+    height: 40px;
+    color: white;
 }
-p span{
-    color: black;
+.left{
+    float: left;
+    
+    
+
 }
+.left h1{
+    color: rgb(12, 12, 54);
+    font-weight: bold;
+    font-size: 40px;
+    position: absolute;
+    top: 20%;
+    right: 60%;
+    
+    
+    
+}
+.left span{
+    color: skyblue;
+}
+.desc pre{
+    position: absolute;
+    top: 47%;
+    right: 48%;
+    font-size:x-large;
+
+}
+.desc button{
+    position: absolute;
+    top: 61%;
+    left:8%;
+    padding: 15px;
+    border-radius: 10px;
+    background-color: rgba(0, 179, 255, 0.799);
+    color: white;
+    width: 20%;
+    height: 50px;
+}
+.right{
+    float: left;
+}
+.right img{
+    position: absolute;
+    top: 20%;
+    left: 60%;
+    width: 30%;
+}
+
+
